# openclaw-ha-addon

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  Dockerfile  INSTALL.md  MIGRATION.md  README.md  config.yaml  repository.yaml  run.sh
.github/workflows/: build-ghcr.yml
crates/addon-supervisor/: Cargo.toml
crates/addon-supervisor/src/: main.rs
crates/haos-ui/: Cargo.toml
crates/haos-ui/src/: main.rs
crates/ingressd/: Cargo.toml
crates/ingressd/src/: main.rs
crates/oc-config/: Cargo.toml
crates/oc-config/src/: main.rs
docs/: MAINTAINER_CONTEXT.md  OPERATION_LOG.md  RUNTIME_BOUNDARIES.md
scripts/: patch-openclaw-dist.mjs  patch-openclaw-source.mjs
translations/: en.yaml  zh-Hans.yaml
upstream/openclaw-v2026.4.15/: pnpm-lock.yaml
upstream/openclaw-v2026.4.21/: CHANGELOG.md  package.json
upstream/openclaw-v2026.4.21/docs/.generated/: config-baseline.sha256  plugin-sdk-api-baseline.sha256
upstream/openclaw-v2026.4.21/docs/concepts/: model-providers.md
upstream/openclaw-v2026.4.21/docs/gateway/: doctor.md
upstream/openclaw-v2026.4.21/extensions/openai/: openai-codex-provider.ts
upstream/openclaw-v2026.4.21/src/agents/: pi-tools.create-openclaw-coding-tools.test.ts  pi-tools.ts
upstream/openclaw-v2026.4.21/src/config/: bundled-channel-config-metadata.generated.ts
upstream/openclaw-v2026.4.22/: CHANGELOG.md
upstream/openclaw-v2026.4.23/: CHANGELOG.md
upstream/openclaw-v2026.4.23/docs/help/: testing.md
upstream/openclaw-v2026.4.23/scripts/: openclaw-npm-postpublish-verify.ts  test-live-codex-harness-docker.sh
(+42 files in other folders)
