[workspace]
members = [
  "crates/addon-supervisor",
  "crates/haos-ui",
  "crates/ingressd",
  "crates/oc-config",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["SunBoss"]

[workspace.dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
