[package]
name = "ingressd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
rustls = { version = "0.23.37", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
